@@ -12,15 +12,4 @@
 -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager
 -Djute.maxbuffer=15728640
 -Dlog4j2.formatMsgNoLookups=true
---add-modules=org.bouncycastle.fips.tls,org.bouncycastle.fips.core
---module-path=/opt/service/dependencies
---add-exports=java.base/sun.security.internal.spec=ALL-UNNAMED
---add-exports=java.base/sun.security.provider=org.bouncycastle.fips.tls
---add-exports=java.base/sun.security.provider=org.bouncycastle.fips.core
--Djava.security.properties=/home/druid-cluster/apache-druid/conf/druid/bcfips-java.security
--Dorg.bouncycastle.jsse.client.assumeOriginalHostName=true
--Dorg.bouncycastle.fips.approved_only=true
--Dorg.bouncycastle.jsse.enable_jks=true
--Dorg.bouncycastle.jsse.server.dh.disableDefaultSuites=true
--Dorg.bouncycastle.jsse.client.dh.disableDefaultSuites=true
 {{additional_jvm_config}}
